--- a/l0/l0g1000.md
+++ b/l0/l0g1000.md
@@ -33,12 +33,12 @@
 这时，当运行`python hello_world.py`会在终端中得到如下显示：
 ![Terminal](./images/4.png)
 
-该结果提示网页可通过开发机的端口 7860 访问。此时用浏览器访问http://127.0.0.1:7860时会无法显示相应网页，有两个原因：
+该结果提示网页可通过开发机的端口 7860 访问。此时用浏览器访问`http://127.0.0.1:7860`时会无法显示相应网页，有两个原因：
 
-1. 服务是跑在开发机上的，但是http://127.0.0.1访问的是本地网络
+1. 服务是跑在开发机上的，但是`http://127.0.0.1`访问的是本地网络
 2. 开发机的 7860 端口不是外部网络可以访问的端口
 
-这时就需要采用端口映射，即在本地浏览器中访问http://127.0.0.1:7860时，通过开发机暴露的端口将流量转发给开发机的内部端口。有两种方法：
+这时就需要采用端口映射，即在本地浏览器中访问`http://127.0.0.1:7860`时，通过开发机暴露的端口将流量转发给开发机的内部端口。有两种方法：
 
 1. 在本地终端上运行以下命令，`ssh -p {远程开发机暴露端口} root@ssh.intern-ai.org.cn -CNg -L {本地访问端口}:127.0.0.1:{远程开发机内部服务端口} -o StrictHostKeyChecking=no`，替换{远程开发机暴露端口}为开发机的开放端口，在 InternStudio 中可查，{本地访问端口}为本地机器的端口，{远程开发机内部服务端口}为运行网页服务时使用的开发机内部端口
 
@@ -47,10 +47,10 @@
 ssh -p 12345 root@ssh.intern-ai.org.cn -CNg -L 7780:127.0.0.1:7860 -o StrictHostKeyChecking=no
 ```
 
-这个命令行的意思为通过 ssh 建立和远程开发机 ssh.intern-ai.org.cn 的端口映射，即当在本地浏览器中访问http://127.0.0.1:7780时，流量转发到ssh.intern-ai.org.cn的12345端口，然后开发机内容再将流量转发到其7860端口，该端口有网页服务，将会返回网页内容到浏览器中，这时就能在浏览器中看到如下网页：
+这个命令行的意思为通过 ssh 建立和远程开发机 ssh.intern-ai.org.cn 的端口映射，即当在本地浏览器中访问`http://127.0.0.1:7780`时，流量转发到 ssh.intern-ai.org.cn 的 12345 端口，然后开发机内容再将流量转发到其 7860 端口，该端口有网页服务，将会返回网页内容到浏览器中，这时就能在浏览器中看到如下网页：
 ![Website](./images/5.png)
 
-2. 如果在 VSCode 中的终端中运行`python hello_world.py`端口会自动映射，不需要手动配置，可以修改映射端口。
+2. 如果在 VSCode 中 ssh 远程的终端中运行`python hello_world.py`端口会自动映射，不需要手动配置，可以修改映射端口。
 
 ## Step 3
 
